--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -79,12 +79,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Print inputs
-        run: |
-          echo "${{ github.event.inputs.text }}"
+        run: echo "${{ github.event.inputs.text }}"
 
       - name: Print inputs via env
-        run: |
-          echo "${TEXT_DATA}"
+        run: echo "${TEXT_DATA}"
         env:
           TEXT_DATA: ${{ github.event.inputs.text }}
 
