--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -79,7 +79,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Print inputs
-        run: echo "${{ github.event.inputs.text }}"
+        run: echo ${{ github.event.inputs.text }}
 
       - name: Print inputs via env
         run: echo "${TEXT_DATA}"
